--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,48 @@
+# Compiled source #
+###################
+*.com
+*.class
+*.dll
+*.exe
+*.o
+*.so
+
+# Packages #
+############
+# it's better to unpack these files and commit the raw source
+# git has its own built in compression methods
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
+
+# Logs and databases #
+######################
+*.log
+*.sql
+*.sqlite
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+Icon?
+ehthumbs.db
+Thumbs.db
+
+# Vagrant #
+###########
+.vagrant
+
+# nodejs #
+###########
 lib-cov
 *.seed
 *.log
@@ -7,9 +52,11 @@ lib-cov
 *.pid
 *.gz
 
+dist
 pids
 logs
 results
 
 npm-debug.log
 node_modules
+build
