the basic test suite with a rough structure of the code

--- a/package.json
+++ b/package.json
@@ -19,7 +19,12 @@
   ],
   "devDependencies": {
     "mocha": "~1.14.0",
-    "should": "~2.1.0"
+    "should": "~2.1.0",
+    "wrench": "~1.5.8",
+    "through": "~2.3.4",
+    "async": "~0.2.10",
+    "hyperquest": "~0.2.0",
+    "concat-stream": "~1.4.4"
   },
   "author": "Kai Davenport",
   "license": "MIT",
@@ -28,6 +33,7 @@
   },
   "homepage": "https://github.com/binocarlos/lem",
   "dependencies": {
-    "level": "~0.18.0"
+    "level": "~0.18.0",
+    "level-live-stream": "~1.4.9"
   }
 }
