--- a/package.json
+++ b/package.json
@@ -32,8 +32,9 @@
   },
   "homepage": "https://github.com/binocarlos/lem",
   "dependencies": {
+    "level": "~1.4.0",
+    "level-live-stream": "~1.4.9",
     "through": "~2.3.4",
-    "level": "~0.18.0",
-    "level-live-stream": "~1.4.9"
+    "xtend": "^4.0.1"
   }
 }
