--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   "homepage": "https://github.com/binocarlos/lem",
   "dependencies": {
     "through": "~2.3.4",
-    "xtend": "^4.0.1"
+    "xtend": "^4.0.1",
     "level": "~1.4.0",
     "level-live-stream": "~1.4.9"
   }
