--- a/package.json
+++ b/package.json
@@ -18,12 +18,10 @@
     "leveldb"
   ],
   "devDependencies": {
-    "mocha": "~1.14.0",
-    "should": "~2.1.0",
-    "wrench": "~1.5.8",
-    "async": "~0.2.10",
-    "hyperquest": "~0.2.0",
-    "concat-stream": "~1.4.4"
+    "async": "^2.0.1",
+    "level-test": "^2.0.2",
+    "mocha": "^3.0.0",
+    "should": "^10.0.0"
   },
   "author": "Kai Davenport",
   "license": "MIT",
@@ -32,9 +30,7 @@
   },
   "homepage": "https://github.com/binocarlos/lem",
   "dependencies": {
-    "through": "~2.3.4",
-    "xtend": "^4.0.1",
-    "level": "~1.4.0",
-    "level-live-stream": "~1.4.9"
+    "level-live-stream": "^1.4.11",
+    "through": "^2.3.8"
   }
 }
